# data-ingestion-graph

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: sdk.yml
backend/: .gitignore  Dockerfile  alembic.ini  requirements.txt
backend/alembic/: env.py
docs/: PRODUCT.md  architecture.md  durable-execution.md  ingest-and-query.md  lan-deployment.md  postgres-connectors.md  readiness-roadmap.md
frontend/: .gitignore  Dockerfile  package-lock.json  package.json  postcss.config.js  svelte.config.js  vite.config.ts
scripts/: init_lan_env.py  verify_compose.py
sdk/: README.md  pyproject.toml
sdk/docs/: document-ai.md  rest-source.md
sdk/src/ingestion_graph/: __init__.py  artifacts.py  cli.py  conformance.py  errors.py  messages.py  models.py  pipeline.py  plugins.py  postgres.py  py.typed  query.py  secrets.py  state.py  transforms.py
sdk/src/ingestion_graph/connectors/: __init__.py  base.py
sdk/src/ingestion_graph/destinations/: __init__.py  jsonl.py  postgres.py  sqlite.py
sdk/src/ingestion_graph/document_ai/: __init__.py  cache.py  docling_adapter.py  models.py  protocols.py  quality.py  rendering.py  rendering_worker.py  splitters.py  tables.py  tesseract.py  vision.py
sdk/src/ingestion_graph/sources/: __init__.py  discord.py  documents.py  jsonl.py  postgres.py  rest.py
sdk/tests/: test_connector_conformance.py  test_connector_manifests.py  test_discord_source.py  test_document_ai_adapters.py  test_document_ai_core.py  test_documents_ocr.py  test_documents_source.py  test_ingest_and_query.py  test_models_and_storage.py  test_pipeline.py  test_postgres_connectors.py  test_rest_source.py
sdk/typecheck/: consumer.py
(+194 files in other folders)
